--- a/src/main/resources/com/example/cse338_spring2022_project/SignUp.fxml
+++ b/src/main/resources/com/example/cse338_spring2022_project/SignUp.fxml
@@ -13,8 +13,8 @@
       <TextField fx:id="ID" layoutX="327.0" layoutY="197.0" promptText="ID" />
       <TextField fx:id="Pass" layoutX="327.0" layoutY="239.0" promptText="Password" />
       <TextField fx:id="FirstName" layoutX="327.0" layoutY="85.0" promptText="First Name" />
-      <Button layoutX="331.0" layoutY="321.0" mnemonicParsing="false" onAction="#SignmeUP" text="Sign Up" />
-      <Button layoutX="424.0" layoutY="321.0" mnemonicParsing="false" onAction="#Cancel" text="Cancel" />
+      <Button defaultButton="true" layoutX="331.0" layoutY="321.0" mnemonicParsing="false" onAction="#SignmeUP" text="Sign Up" />
+      <Button cancelButton="true" layoutX="424.0" layoutY="321.0" mnemonicParsing="false" onAction="#Cancel" text="Cancel" />
       <TextField fx:id="CPass" layoutX="327.0" layoutY="279.0" promptText="Confirm Password" />
       <ImageView fitHeight="289.0" fitWidth="292.0" layoutX="21.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -27,7 +27,7 @@
          </font>
       </Label>
       <TextField fx:id="LastName" layoutX="327.0" layoutY="123.0" promptText="Last Name" />
-      <Label fx:id="SignUpMesaage" alignment="CENTER" layoutX="331.0" layoutY="352.0" prefHeight="17.0" prefWidth="141.0" textFill="RED" />
+      <Label fx:id="SignUpMesaage" alignment="CENTER" layoutX="259.0" layoutY="352.0" prefHeight="17.0" prefWidth="260.0" textFill="RED" />
       <TextField fx:id="UserName" layoutX="327.0" layoutY="160.0" promptText="User Name" />
    </children>
 </AnchorPane>
